@@ -11,5 +11,8 @@ $(window).on('entity:map', function (e, data) {
         paths.load(window.SETTINGS.urls.path_layer);
         map.layerscontrol.addOverlay(paths, tr('Paths'));
         paths.addTo(map);
+        paths.on('data:loaded', function (e) {
+            paths.showExtremities('stopM');
+        });
     }
 });
